omni/tests/goldens/types/undefined_ident_10.omni
let result10:int = missing10
